--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         id="links01" class="links">
                         <li class="n01"><a href="#home">Home</a></li>
                         <li class="n02"><a href="#one">Buy</a></li>
-                        <li class="n03"><a href="https://domain.ext/path">About Us</a></li>
+                        <li class="n03"><a href="#two">About Us</a></li>
                         </ul>
                         <ul id="buttons01" class="style1 buttons">
                             <li><a href="https://kyaru.loves-man.ga/invite/" class="button n01"><svg><use xlink:href="#icon-93f"></use></svg><span class="label">Join the Discord!</span></a></li>
