--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="inner">
                 <section id="home-section">
                     <hr id="divider05" class="style2">
-                    <h1 id="text02" class="style1">Kyaru&#039;s Generator</h1>
-                    <p id="text03" class="style4">An account generator with a <a href="https://discord.com"><span style="color: #18d26e"><strong><u>Free Plan</strong></u></span></a> and a <a href="#buy"><span style="color: #18d26e"><strong><u>Powerful Paid Plan</strong></u></span></a></p>
+                    <h1 id="text02" class="style1">Product</h1>
+                    <p id="text03" class="style4">A service with a <a href="https://discord.com"><span style="color: #18d26e"><strong><u>Free Plan</strong></u></span></a> and a <a href="#buy"><span style="color: #18d26e"><strong><u>Powerful Paid Plan</strong></u></span></a></p>
                     <ul
                         id="links01" class="links">
                         <li class="n01"><a href="#home">Home</a></li>
@@ -63,7 +63,7 @@
                                     <div id="list02" class="list">
                                         <ul>
                                             <li>
-                                                <p>Unrestricted Selection of Accounts</p>
+                                                <p>First Item</p>
                                             </li>
                                             <li>
                                                 <p>Second Item</p>
@@ -80,7 +80,7 @@
                                     <div id="list01" class="list">
                                         <ul>
                                             <li>
-                                                <p>Restricted Selection of Accounts</p>
+                                                <p>First Item</p>
                                             </li>
                                             <li>
                                                 <p>Second item</p>
@@ -103,8 +103,8 @@
                     <ul id="buttons04" class="style2 buttons">
                         <li><a href="#home" class="button n01"><svg><use xlink:href="#icon-960"></use></svg><span class="label">Back</span></a></li>
                     </ul>
-                    <h2 id="text05" class="style2">Main Owner - <span style="color: #18D26E">Heaithy#2982</span></h2>
-                    <p id="text06" class="style3">:) <u><a href="https://heaithy.loves-man.ga">bio here</a></u></p>
+                    <h2 id="text05" class="style2">Main Owner - <span style="color: #18D26E">User</span></h2>
+                    <p id="text06" class="style3">:) <u><a href="#home">link here</a></u></p>
                     <hr id="divider03" class="style1 full">
                     <ul id="buttons05" class="style1 buttons">
                         <li><a href="#here" class="button n01"><svg><use xlink:href="#icon-a3c"></use></svg><span class="label">Button 1</span></a></li>
